# mcut

./: .clang-format  .gitmodules  CHANGELOG.txt  CLA  CMakeCache.txt  CMakeLists.txt  CONTRIBUTORS  DESCRIPTION.txt  Doxyfile.in  LICENCE  LICENSE  LICENSE.txt  README.md  README.txt  TODO.txt
.github/workflows/: linux.yaml  macos.yml  windows.yml
cmake/: FindMCUT_MPFR.cmake  FindMCUT_MPIR.cmake
docs/: CMakeLists.txt
incl/mcut/: mcut.h  platform.h
incl/mcut/internal/: bvh.h  geom.h  halfedge_mesh.h  kernel.h  math.h  number.h
include/: mcut.h  platform.h
include/mcut/: mcut.h  platform.h
include/mcut/internal/: bvh.h  frontend.h  frontend_intersect.h  geom.h  halfedge_mesh.h  hmesh.h  kernel.h  math.h  number.h  preproc.h  preproc_dispatch.h  scheduler.h  timer.h  tpool.h  utils.h
include/mcut/internal/cdt/: CDT.h  CDT.hpp  CDTUtils.h  KDTree.h  LocatorKDTree.h  Triangulation.h  VerifyTopology.h  cdt.h  kdtree.h  triangulate.h  utils.h
include/mcut/internal/nfg/: README.txt  memPool.h  numerics.h  numerics.hpp
include/mcut/internal/pool_allocator/: pool_allocator.h  pool_allocator.tcc
include/mcut/internal/tri/: tri.h
source/: bvh.cpp  frontend.cpp  frontend_intersect.cpp  geom.cpp  halfedge_mesh.cpp  hmesh.cpp  kernel.cpp  math.cpp  mcut.cpp  mesh.cpp  number.cpp  preproc.cpp  preproc_dispatch.cpp  shewchuk.c  utility.cpp
src/: halfedge_mesh.cpp  kernel.cpp  math.cpp  mcut.cpp  mesh.cpp
tests/: CMakeLists.txt  api-tests.cpp  cutting-tests.cpp  off.cpp  off.h
tests/include/: off.h
tests/meshes/benchmarks/: cut-mesh059.off  cut-mesh060.off  cut-mesh061.off  cut-mesh063.off  src-mesh059.off  src-mesh060.off  src-mesh061.off  src-mesh062.off  src-mesh063.off
tests/source/: arbitraryPrecisionInput.cpp  benchmark.cpp  booleanOperation.cpp  computeSeams.cpp  concurrentSynchronizedContexts.cpp  createContext.cpp  debugCallback.cpp  debugVerboseLog.cpp  degenerateInput.cpp  dispatchFilterFlags.cpp  getContextInfo.cpp  getDataMaps.cpp  getEventInfo.cpp  intersectionType.cpp  main.cpp  off.cpp  perturbationState.cpp  polygonWithHoles.cpp  setPrecision.cpp  setRoundingMode.cpp  triangulation.cpp  userEvents.cpp
tutorials/: CMakeLists.txt
tutorials/AdjacentFaces/: AdjacentFaces.cpp  CMakeLists.txt
tutorials/BasicCmdLineApp/: BasicCmdLineApp.cpp  CMakeLists.txt
tutorials/CSGBoolean/: CMakeLists.txt  CSGBoolean.cpp
tutorials/EventCallback/: CMakeLists.txt  EventCallback.cpp
tutorials/FaceNormals/: CMakeLists.txt  FaceNormals.cpp
tutorials/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
tutorials/InOutQuery/: CMakeLists.txt  InOutQuery.cpp
tutorials/InOutQuery/data/: cube.off  icosphere.off
tutorials/MultipleContextsInParallel/: CMakeLists.txt  MultipleContextsInParallel.cpp
tutorials/MultipleContextsInParallel/data/: cube.off  cut-mesh.off  torus.off
tutorials/PlanarSectioning/: CMakeLists.txt  PlanarSectioning.cpp
tutorials/QuerySeamVerticesSorted/: CMakeLists.txt  QuerySeamVerticesSorted.cpp
tutorials/QuerySeamVerticesSorted/data/: cut-mesh.off
tutorials/QuerySeamVerticesUnsorted/: CMakeLists.txt  QuerySeamVerticesUnsorted.cpp
tutorials/ReversedConnectedComponentFaces/: CMakeLists.txt  ReversedConnectedComponentFaces.cpp
tutorials/TextureCoordinates/: CMakeLists.txt  README.txt  TextureCoordinates.cpp
tutorials/TextureCoordinates/data/: bunnyMesh.mtl  terrainMesh.mtl
tutorials/TriangulatedFaceMaps/: CMakeLists.txt  TriangulatedFaceMaps.cpp
tutorials/Triangulation/: CMakeLists.txt  Triangulation.cpp
tutorials/VertexNormals/: CMakeLists.txt  VertexNormals.cpp
